--- a/LEC-11/拜占庭容错.md
+++ b/LEC-11/拜占庭容错.md
@@ -5,32 +5,29 @@
 为什么我们读这篇文章？
 
 * 令人印象深刻
-    - 解决比Raft更严格的问题
+	- 解决比Raft更严格的问题
     - 即存在恶意副本的状态机复制
 * BFT今天没有广泛使用
     - 人们依靠预防和检测受损节点
 * BFT正在看到像比特币一样的系统
     - 比特币解决了与恶意参与者的共识
       - 但是，解决问题的工作和长时间的延误
-    - 恒星推广联邦部署的PBFT
+    - NASA推广联邦部署的PBFT
     - IBM的hyperledger使用PBFT
 
 * 我们考虑过许多​​容错协议
-  - 一直假设“故障停止”故障 - 如电源故障
-  - 即服务器遵循协议
-  - 足够硬：崩溃vs网络下降; 网络分区
+  - 一直假设“故障”导致的停止 - 如电源故障
+  - 即服务器遵循协议异常
+  - 硬件故障：崩溃vs网络下降; 网络分区
 
 * 能处理更大类别的失败？
   - 错误的服务器，计算不正确而不是停止？
-  - 服务器*不*遵循协议？
+  - 服务器不遵循协议？
   - 受攻击者修改的服务器？
   - 经常被称为“拜占庭”故障
 
 * 论文的方法：
-  - 复制状态机
-  - 假设3f + 1的2f + 1是无故障的
-  - 使用投票选择正确的结果
-  - 不像听起来那么容易
+  - 复制状态机：假设3f + 1的2f + 1是无故障的，使用投票选择正确的结果，不像听起来那么容易
 
 * 我们假设最坏的情况：
   - 单个攻击者控制f错误的副本
@@ -44,18 +41,10 @@
   - 可以读取网络消息
   - 可以暂时强制通过DoS延迟消息
 
-* 什么故障不能*发生？
-  - 3f + 1副本中的f不能超过f
-  - 没有客户端的故障 - 客户永远不会做任何坏事
+* 什么故障不能发生？
+  - 3f + 1副本中的失败副本不能超过正确副本
+  - 没有客户端的故障，客户永远不会做任何坏事
   - 没有猜到加密密钥或破解加密
-
-* 示例使用场景：
-  - RM：
-    - 回声A>等级
-    - 回声B>等级
-    - 告诉FK“档案档案就绪”
-  - FK：
-    - 猫等级
 
 * 错误的系统可以：
   - 完全构成文件内容
@@ -84,10 +73,10 @@
   - 一个服务器可以通过不同意来阻止进度
 
 * 设计2：
-  - 让我们复制投票
+  - 让我们replication投票
   - 2f + 1服务器，假定不超过f有故障
   - 客户端等待f + 1匹配回复
-    - 如果只有f有错误，网络最终工作，必须得到他们！
+    - 如果只有f有错误，网络最终工作，必须保障他们！
 
 * 设计2的2f + 1有什么问题？
   - f + 1个匹配的回复可能是坏的节点，只有1个好
@@ -106,7 +95,8 @@
     - 例如打破正确性; 它应该提供线性化（返回B）
     
 ```
-       放k = A Put k = B获取k  - > A（f表示发送A）
+
+	Put k = A Put k = B获取k  - > A（f表示发送A）
     C  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  - - - 
            ^ ^ ^ \ ^ ^ \ ^ ^
         \ / / / \ / / \ / /
@@ -117,8 +107,7 @@
     g2 ------------------------------------------------- - 
             一个                         
 
-    ==>需要确保回复包括大多数好的节点，这样
-    至少有一个会稍后返回B
+    ==>需要确保回复包括大多数好的节点，这样至少有一个会稍后返回B
 ```
 
 * 设计3：
@@ -137,10 +126,10 @@
     - 客户不知道相信什么（也不是2f + 1）
       - 但是保证有一个问题
   - 所以客户端可以*检测*一些好的节点错过了一个操作
-    - 我们将会看到如何修复
 
 ```
-       Put k = A Put k = B Get k：ABBA 
+	
+	Put k = A Put k = B Get k：ABBA 
     C  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  - - - 
            ^ ^ ^ ^ ^ ^ ^ ^ ^ ^ ^ ^ ^ ^ ^
         \ / / / / \ / / / / / / / / /
@@ -156,32 +145,28 @@
 * 如何处理多个客户端？
   - 非故障副本必须以相同的顺序处理操作！
 
-* 让我们有一个主要选择并发客户端请求的顺序
-  但是我们必须担心主要的错误
+* 让我们有一个主要选择并发客户端请求的顺序:但是我们必须担心主要的错误
 
 * 主要做错什么？
-  - 1.向客户发送错误的结果
+  - 1.向client发送错误的结果
   - 2.不同的ops到不同的副本
   - 3.忽略一个客户端
 
 * 处理故障初级的一般方法
   - 1.副本将结果直接发送给客户端
-  - 2.副本交换关于主要发送的操作的信息
-  - 3.客户端通知每个操作的副本以及主要的
+  - 2.副本交换关于master发送的操作的信息
+  - 3.客户端通知每个操作的副本以及Master
      - 每个复制品都会监视每个操作的进度
      - 如果没有进展，强制改变小学
 
-* 当一个副本首次从主要接收它时，副本是否可以执行一个操作？
+* 当一个副本首次从master接收它时，副本是否可以执行一个操作？
   - 否：也许主要对不同的副本给予不同的操作
   - 如果我们确定之前执行，我们已经破坏了副本的状态
   - 需要第二轮消息，以确保所有好的副本都具有相同的操作
 
 * 设计4（含初级）：
   - 3f + 1服务器，一个是主要的，有故障的，主要的可能是错误的
-  - 客户端向主要AND发送请求到每个副本
-  - 主要选择下一个op和op＃
-  - 主要将PRE-PREPARE（op，n）发送给副本
-  - 每个副本将PREPARE（op，n）发送到所有副本
+  - 客户端向主要AND发送请求到每个副本,主要选择下一个op,主要将PRE-PREPARE（op，n）发送给副本,每个副本将PREPARE（op，n）发送到所有副本
   - 如果副本从2f + 1个副本（包括本身）获得匹配的PREPARE（op，n）
     - n是下一个操作＃
     - 执行操作，可能修改状态
@@ -191,8 +176,9 @@
   - 客户端在获得f + 1匹配回复时很高兴
 
 ```
-    op f + 1匹配回复
-    C  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  - - --------------------------------------
+
+	op f + 1匹配回复
+    C  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  - ---------------------------------------
                                                        ^ ^
         \ pre-P（op，n）PREPARE 2f + 1匹配答复p /
     p ------------------------------------------------- --------------------------------------
@@ -205,10 +191,10 @@
 ```
 
 * 记住我们的策略：
-  - 主要遵循协议=>进度
-  - 没有进度=>副本检测和强制改变主要
+  - 主要遵循协议=>通信
+  - 没有通信=>副本检测和强制改变Master
 
-* 如果主要是无故障的，可以错误的副本阻止正确的进度？
+* 如果Master是无故障的，可以错误的副本阻止正确的通信？
   - 他们不能伪造主要msgs
   - 他们可以延迟msgs，但不能永远
   - 他们不能做任何事情，但它们不需要2f + 1匹配的PREPARE
@@ -226,7 +212,7 @@
     - 即使没有加工
   - 将复制品检测到这样的攻击？
 
-* 主要发送的结果与差异复制的差异？
+* 主要发送的结果与复制的差异？
   - 情况1：所有好的节点得到2f + 1匹配的PREPARE
     - 他们都是一样的吗？
     - 是的，每个获得2f + 1匹配的PREPARE的人都必须有相同的操作
@@ -244,34 +230,30 @@
     - 结果：客户端从未收到回复
     - 结果：系统会停止，因为f + 1卡住等待这个操作
 
-* 主要故障后如何恢复运作？
-  - 需要查看更改以选择新的主要
-  （此视图更改仅选择主要;没有设置实时服务器的概念）
+* Master故障后如何恢复运作？
+  - 需要查看更改以选择新的Master
 
-* 复制品何时要求修改视图？
+* 复制何时要求修改视图？
   - 如果它看到一个客户端，但没有看到2f + 1匹配的PREPARE
   - 经过一段超时时间
 
 * 如果只有一个副本要求，可以触发视图更改吗？
   - 否：错误的副本可能导致不断的视图更改
 
-* 让我们推迟多少个副本必须要求的问题
-  - 视图变化
-  
-* 谁是下一个主要的？
-  - 需要确保错误的副本不能总是使自己成为下一个主要的
+* 谁是下一个Master？
+  - 需要确保错误的副本不能总是使自己成为下一个Master
   - 查看数字v
-  - 主要是v mod n
+  - Master v mod n
   - 所以主机在服务器之间转动
   - 最多连续发生错误的初选
 
 * 查看变更设计1（不正确）
   - 副本发送VIEW-CHANGE请求到* new * primary
-  - 新的主要等待足够的查看更改请求
+  - 新的Master等待足够的查看更改请求
   - 新主播宣布视角更改与NEW-VIEW
-    - 包括VIEW-CHANGE请求
+    - 包括VIE-WCHANGE请求
     - 作为足够的副本想要改变观点的证明
-  - 新的主要开始编号操作，最后n看到+ 1
+  - 新的Master开始编号操作，最后n看到+ 1
 
 * 所有无故障的副本是否同意视图更改的操作编号？
 
@@ -279,16 +261,16 @@
   - 我看到2f + 1的PREPAREs操作n，所以我执行它
   - 新的小学没有，所以没有执行它
   - 因此新的主要可能开始在n编号，产生两个不同的op #n
-- 可以新的主要问所有副本的执行操作集吗？
-  - 不工作：新的主要只能等待2f + 1的回复
-    - 错误的副本可能会回复，所以新的主要可能不会等待我
+- 可以新的Master问所有副本的执行操作集吗？
+  - 不工作：新的Master只能等待2f + 1的回复
+    - 错误的副本可能会回复，所以新的Master可能不会等待我
 
 - 解：
-  - 不要执行操作，直到确定一个新的主要人员会听到它,添加第三阶段：PRE-PREPARE，PREPARE，然后COMMIT仅在提交后执行
+  - 不要执行操作，直到确定一个新的主Master会听到它,添加第三阶段：PRE-PREPARE，PREPARE，然后COMMIT仅在提交后执行
 
 - 操作协议：
-  - 客户端发送op到主要
-  - 主要向所有人发送PRE-PREPARE（op，n）
+  - 客户端发送op到Master
+  - Master向所有人发送PRE-PREPARE（op，n）
   - 全部发送PREPARE（op，n）
   - 复制后接收到2f + 1匹配PREPARE（op，n）
     - 将COMMIT（op，n）发送给所有
@@ -296,21 +278,21 @@
     - 执行op
 
 - 查看更改：
-  - 每个副本将为最近的操作发送新的主要2f + 1 PREPARE
-  - 新的主要等待2f + 1 VIEW-CHANGE请求
-  - 新的主要发送NEW-VIEW msg到所有副本
+  - 每个副本将为最近的操作发送新的Master 2f + 1 PREPARE
+  - 新的Master等待2f + 1 VIEW-CHANGE请求
+  - 新的Master发送NEW-VIEW msg到所有副本
     - 完整的VIEW-CHANGE msgs
     - 每个操作的列表，其中一些VIEW-CHANGE包含2f + 1个PREPARE
     - 即最后一个视图的最终操作列表
 
-- 如果一个副本执行一个操作，新的主要会知道那个op？
+- 如果一个副本执行一个操作，新的Master会知道那个op？
   - 副本仅在接收到2f + 1 COMMITS后执行也许是那些谎言，从错误的副本，谁不会告诉新的小学
-  但是f + 1 COMMIT来自复制品，其中有2f + 1匹配的PREPARE新的主要等待来自2f + 1副本的查看更改请求
+  但是f + 1 COMMIT来自复制品，其中有2f + 1匹配的PREPARE新的Master等待来自2f + 1副本的查看更改请求
     - 忽略f个故障节点
     -  + 1发送COMMIT，f + 1发送VIEW-CHANGE
     - 必须重叠
 
-- 新的主要可能会省略近期的一些操作？
+- 新的Master可能会省略近期的一些操作？
   - 否，NEW-VIEW必须包括签名的VIEW-CHANGE消息
 
 - 论文也在讨论
@@ -321,9 +303,7 @@
 
 - 超过f损坏的服务器的后果是什么？
   - 系统可以恢复吗？
-
 - 如果客户端损坏了？
-
 - 假设攻击者可能会损坏其中一个服务器
   - 利用错误或窃取密码，或具有物理访问权限，＆c
   - 为什么攻击者不能摧毁他们呢？
