--- a/LEC-11/拜占庭容错.md
+++ b/LEC-11/拜占庭容错.md
@@ -9,32 +9,33 @@
     - 即存在恶意副本的状态机复制
 * BFT今天没有广泛使用
     - 人们依靠预防和检测受损节点
-* BFT正在看到像比特币一样的系统
+* BFT正在被像比特币一样的系统使用
     - 比特币解决了与恶意参与者的共识
-      - 但是，解决问题的工作和长时间的延误
-    - NASA推广联邦部署的PBFT
+      - 但是，解决问题时的时间比较长
+    - NASA使用了PBFT
     - IBM的hyperledger使用PBFT
 
 * 我们考虑过许多​​容错协议
   - 一直假设“故障”导致的停止 - 如电源故障
-  - 即服务器遵循协议异常
+  - 即服务器遵循协定的协议异常
   - 硬件故障：崩溃vs网络下降; 网络分区
 
 * 能处理更大类别的失败？
   - 错误的服务器，计算不正确而不是停止？
   - 服务器不遵循协议？
   - 受攻击者修改的服务器？
-  - 经常被称为“拜占庭”故障
+
+以上几点经常被称为“拜占庭”问题
 
 * 论文的方法：
-  - 复制状态机：假设3f + 1的2f + 1是无故障的，使用投票选择正确的结果，不像听起来那么容易
+  - replication集群：假设3f + 1的2f + 1是无故障的，使用投票选举出正确的结果
 
 * 我们假设最坏的情况：
   - 单个攻击者控制f错误的副本
   - 并正在积极尝试打破系统
-  - 如果我们可以处理这个问题，我们也可以处理f副本中的错误
+  - 在我们可以处理这个问题的时候，如果正常的机器是f+1,我们也可以处理f副本中的错误
 
-* 攻击者的权力是甚么？
+* 攻击者的权力是什么？
   - 提供错误的副本运行的代码
   - 知道非故障副本正在运行的代码
   - 知道错误的副本加密密钥
@@ -52,8 +53,7 @@
   - 向RM显示“B”，将“A”显示为FK
   - 执行write（“B”）只有一些副本
 
-* 我们试图设计我们自己的拜占庭容错RSM
-  - 开始简单（和破碎），努力走向纸张的设计
+* 我们试图设计我们自己的拜占庭容错RSM系统
 
 * 设计1：
   - [客户端，n台服务器]
@@ -61,22 +61,22 @@
     - 服务器没有相同的漏洞利用
     - 不同的操作系统，不同的服务实现等 
 * 客户端和服务器具有公钥对
-    - 每封邮件均通过发送签名
+    - 每一个消息均通过签名发送
     - 收件人验证消息
 * 客户端向所有服务器发送请求
 * 等待所有的n回复
     - 认证回复
-* 只有所有的人都同意的话
+* 只有所有的人都同意的情况
     
 * 设计1有什么问题？
   - 一个服务器可能已被盗用
   - 一个服务器可以通过不同意来阻止进度
 
 * 设计2：
-  - 让我们replication投票
+  - 让我们replication（副本）投票
   - 2f + 1服务器，假定不超过f有故障
   - 客户端等待f + 1匹配回复
-    - 如果只有f有错误，网络最终工作，必须保障他们！
+    - 如果只有f有错误，集群能够正常提供服务，必须保障他们！
 
 * 设计2的2f + 1有什么问题？
   - f + 1个匹配的回复可能是坏的节点，只有1个好
@@ -90,9 +90,9 @@
       - 客户端不能等待g2，因为它可能是一个故障的服务器
     - f和g2回复read（），但是g1错过了
     - 所以read（）产生“A”
-  - 结果：客户被骗了接受基于过期状态的回复
-    - 例如TA从成绩文件中读取A而不是B
-    - 例如打破正确性; 它应该提供线性化（返回B）
+  - 结果：客户接受基于过期状态的回复
+    - 例如A从成绩文件中读取A而不是B
+    - 例如打破正确性; 它应该具有顺序性（返回B）
     
 ```
 
@@ -145,9 +145,9 @@
 * 如何处理多个客户端？
   - 非故障副本必须以相同的顺序处理操作！
 
-* 让我们有一个主要选择并发客户端请求的顺序:但是我们必须担心主要的错误
+* 让我们有一个Master选择并发客户端请求的顺序:但是我们必须担心Master的错误
 
-* 主要做错什么？
+* Master可能发生什么故障？
   - 1.向client发送错误的结果
   - 2.不同的ops到不同的副本
   - 3.忽略一个客户端
@@ -165,10 +165,10 @@
   - 需要第二轮消息，以确保所有好的副本都具有相同的操作
 
 * 设计4（含初级）：
-  - 3f + 1服务器，一个是主要的，有故障的，主要的可能是错误的
-  - 客户端向主要AND发送请求到每个副本,主要选择下一个op,主要将PRE-PREPARE（op，n）发送给副本,每个副本将PREPARE（op，n）发送到所有副本
+  - 3f + 1服务器，一个是Master，有故障的，Master的可能发生故障
+  - 客户端向Master发送请求到每个副本,Master选择下一个op,Master将PRE-PREPARE（op，n）发送给副本,然后将PREPARE（op，n）发送到所有副本
   - 如果副本从2f + 1个副本（包括本身）获得匹配的PREPARE（op，n）
-    - n是下一个操作＃
+    - n是下一个操作
     - 执行操作，可能修改状态
     - 向客户发送回复
   - 其他：
@@ -203,22 +203,21 @@
     - 但这些副本最终会听到小学生的操作
   - 最糟糕的结果：延误
 
-* 如果主要是错误的，副本会发现任何问题吗？
-  - 还是可以主要造成不可检测的问题？
-  - 主要不能伪造客户端操作 - 签名
+* 如果Master发生故障，副本会发现任何问题吗？
+  - Master不能伪造客户端操作 - 签名
   - 它不能忽略客户端操作 - 客户端发送到所有副本
   - 它可以尝试以不同的顺序发送到不同的副本，
     - 或尝试欺骗复制品来思考操作
     - 即使没有加工
   - 将复制品检测到这样的攻击？
 
-* 主要发送的结果与复制的差异？
+* Master发送的结果与复制的差异？
   - 情况1：所有好的节点得到2f + 1匹配的PREPARE
     - 他们都是一样的吗？
     - 是的，每个获得2f + 1匹配的PREPARE的人都必须有相同的操作
       - 因为任何两组2f + 1共享至少一个好的服务器
-    - 结果：所有好的节点将执行op2，客户端开心
-  - 情况2：> = f + 1好节点得到2f + 1匹配准备
+    - 结果：所有好的节点将执行op2，客户端执行成功
+  - 情况2：> = f + 1好节点得到2f + 1匹配的PREPARE
     - 再次，没有任何意见分歧
     - 结果：f + 1好节点将执行op，客户端快乐
     - 但是不能执行好的节点
@@ -255,12 +254,10 @@
     - 作为足够的副本想要改变观点的证明
   - 新的Master开始编号操作，最后n看到+ 1
 
-* 所有无故障的副本是否同意视图更改的操作编号？
-
 - 问题：
-  - 我看到2f + 1的PREPAREs操作n，所以我执行它
+  - 我看到2f + 1的PREPARE操作n，所以我执行它
   - 新的小学没有，所以没有执行它
-  - 因此新的主要可能开始在n编号，产生两个不同的op #n
+  - 因此新的Master可能开始在n编号，产生两个不同的op #n
 - 可以新的Master问所有副本的执行操作集吗？
   - 不工作：新的Master只能等待2f + 1的回复
     - 错误的副本可能会回复，所以新的Master可能不会等待我
